Began adding responsiveness to video and store images

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-	<link type="text/css" rel="stylesheet/css" href="./css/base.css" media="screen" />
+	<link type="text/css" rel="stylesheet" href="./css/base.css" media="screen" />
 </head>
 <body>
-	<div>Test div</div>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
-	<div>
-	
-		<a href=""><img src="img/playstore.png" /></a>
-		<a href=""><img src="img/appstore.png" /></a>
+	<div id="main">
+		<div>Test div</div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
+		<div id="store">
+		
+			<a href=""><img src="./img/playstore.png" /></a>
+			<a href=""><img src="./img/appstore.png" /></a>
+		</div>
 	</div>
 	<footer>
-		<nav>
-			<a href="/">Home</a>
-			<a href="/about">About</a>
-			<a href="">Media</a>
-			<a href="mailto:info@impressflow.com">Contact</a>
-		</nav>
+		<a href="./">Home</a>
+		<a href="./about">About</a>
+		<a href="">Media</a>
 	</footer>
 </body>
 </html>
