Beginning to add mobile detection

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="./css/base.css" media="screen" />
+	<script src="./js/device.min.js"></script>
 </head>
 <body>
 	<div id="main">
-		<div>Test div</div>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
 		<div id="store">
 		
