--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 	<div id="main">
+		<div id="logo">
+			<img src="./img/logo.jpg"/>
+		</div>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
 		<div id="store">
 		
-			<a href=""><img src="./img/playstore.png" /></a>
-			<a href=""><img src="./img/appstore.png" /></a>
+			<a href="javascript:alert('Coming soon!');"><img src="./img/playstore.png" /></a>
+			<a href="javascript:alert('Coming soon!');"><img src="./img/appstore.png" /></a>
 		</div>
 	</div>
 	<footer>
