--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <body>
 	<div id="main">
 		<div id="logo">
-			<img src="./img/logo.jpg"/>
+			<img src="./img/logo.png"/>
 		</div>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
 		<div id="store">
-		
 			<a href="javascript:alert('Coming soon!');"><img src="./img/playstore.png" /></a>
 			<a href="javascript:alert('Coming soon!');"><img src="./img/appstore.png" /></a>
 		</div>
