--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<script src="./js/device.min.js"></script>
 </head>
 <body>
+	<div id="background">
+		<img id="bottomClouds" src="./img/background.png" />
+		<div id="clouds"></div>
+	</div>
 	<div id="main">
 		<div id="logo">
 			<img src="./img/logo.png"/>
@@ -20,5 +24,19 @@
 		<a href="./about">About</a>
 		<a href="">Media</a>
 	</footer>
+	<script>
+		if(device.mobile()){
+			var clouds = document.querySelector('#clouds');
+			var bottomTop = document.querySelector('#bottomClouds').getBoundingClientRect().top;
+			for(var i = 3; i > 0; --i){
+				var img = document.createElement("img");
+				img.src = "./img/small_cloud.png";
+				img.style.position = 'absolute';
+				img.style.left = Math.random() * (window.screen.width * 2) + "px";
+				img.style.top = Math.random() * (window.screen.height * 1.5) + "px";
+				clouds.appendChild(img);
+			}
+		}
+	</script>
 </body>
 </html>
