--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="HandheldFriendly" content="true" />
 	<link type="text/css" rel="stylesheet" href="./css/base.css" media="screen" />
 	<script src="./js/device.min.js"></script>
+	<script>
+  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-62553031-1', 'auto');
+  		ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 	<div id="background">
@@ -13,10 +25,10 @@
 		<div id="logo">
 			<img src="./img/logo.png"/>
 		</div>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/vFWNbK43T78?rel=0" frameborder="0" allowfullscreen></iframe>
 		<div id="store">
-			<a href="javascript:alert('Coming soon!');"><img src="./img/playstore.png" /></a>
-			<a href="javascript:alert('Coming soon!');"><img src="./img/appstore.png" /></a>
+			<a href="https://play.google.com/store/apps/details?id=com.impressflow.discopetrevolution"><img src="./img/playstore.png" /></a>
+			<a href="https://itunes.apple.com/us/app/disco-pet-revolution/id977006248"><img src="./img/appstore.png" /></a>
 		</div>
 	</div>
 	<footer>
@@ -25,7 +37,7 @@
 		<a href="">Media</a>
 	</footer>
 	<script>
-		if(device.mobile()){
+	/*	if(device.mobile()){
 			var clouds = document.querySelector('#clouds');
 			var bottomTop = document.querySelector('#bottomClouds').getBoundingClientRect().top;
 			for(var i = 3; i > 0; --i){
@@ -36,7 +48,7 @@
 				img.style.top = Math.random() * (window.screen.height * 1.5) + "px";
 				clouds.appendChild(img);
 			}
-		}
+		}*/	
 	</script>
 </body>
 </html>
